// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtMention should match snapshot, no highlight 1`] = `
<Text>
  @John.Smith
</Text>
`;

exports[`AtMention should match snapshot, with highlight 1`] = `
<Text
  onLongPress={[Function]}
  onPress={[Function]}
>
  <Text
    style={null}
  >
    @John.Smith
  </Text>
  
</Text>
`;

exports[`AtMention should match snapshot, without highlight 1`] = `
<Text
  onLongPress={[Function]}
  onPress={[Function]}
>
  <Text
    style={
      Object {
        "color": "#ff0000",
      }
    }
  >
    @Victor.Welch
  </Text>
  
</Text>
`;
